<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NetworkCallFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.kotlinperformantieapp.NetworkCallViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textCall1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="13dp"
            android:text="@{viewModel.response}"></TextView>
        <TextView
            android:id="@+id/textCall2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="13dp"
            android:text="@{viewModel.response2}"></TextView>
    </LinearLayout>


</layout>