<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_nav_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bgLight">

        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="560dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/llNavScr">

<!--            <Button-->
<!--                android:id="@+id/apiButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="113dp"-->
<!--                android:backgroundTint="@color/bgBlue"-->
<!--                android:text="API zonder coroutine"-->
<!--                android:textColor="@color/white"-->
<!--                tools:layout_editor_absoluteX="14dp"-->
<!--                tools:layout_editor_absoluteY="95dp">-->

<!--            </Button>-->

            <Button
                android:id="@+id/apiCoButton"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:backgroundTint="@color/bgBlue"
                android:text="API met coroutine"
                android:textColor="@color/white">

            </Button>

            <Button
                android:id="@+id/cyptoButton"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:backgroundTint="@color/bgBlue"
                android:text="API met coroutine"
                android:textColor="@color/white">

            </Button>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>