<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CryptoCallFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.kotlinperformantieapp.CryptoCallViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCrypto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@{viewModel.response}"
            android:textSize="15dp" />

    </LinearLayout>


</layout>